--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
         <h3>Contact</h3>
         <a href="" id="expandEmail"><i class="fa-regular fa-envelope"></i>&nbsp;</a>
         <a href="" id="expandLinkedin"><i class="fa-brands fa-linkedin"></i></a>
+        <br>
+        <a href="" id="expandProtfolio" target="_blank"></a>
       </div>
     </div>
 
