--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           Our research project is focused on innovative solutions for real-world
           problems.
         </p>
-        <a href="#project" class="btn">Learn More</a>
+        <a href="#project" class="btn" id="learnmore">Learn More</a>
       </div>
     </section>
 
@@ -87,11 +87,11 @@
     <div class="expand-card" id="expandCard">
       <div class="expand-content">
         <span class="close-btn" id="closeCard">&times;</span>
-        <img id="expandImg" src="" alt="Member" />
+        <img id="expandImg" src="" alt="Member"/>
         <h2 id="expandName"></h2>
         <h3>Expertize</h3>
         <p id="expandExpertize"></p>
-        <h3>Notable Accolades</h3>
+        <h3 id="acheivementh3">Notable Accolades</h3>
         <p id="expandAcheivement"></p>
         <h3>Contact</h3>
         <a href="" id="expandEmail"><i class="fa-regular fa-envelope"></i>&nbsp;</a>
